Замена webView у desktop таргета